[package]
name = "treehouse"
version = "0.1.0"
edition = "2021"

[lib]
name = "treehouse"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
convert_case = "0.6.0"
prettyplease = "0.2.15"
proc-macro2 = { version = "1.0.67", features = ["span-locations"] }
quote = "1.0.33"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
syn = { version = "2.0.37", features = ["full", "extra-traits"] }
